SUBDIRS = libltdl dmtool ecell osdep doc build

BASIC_DOCS = \
	AUTHORS \
	COPYING \
	COPYING.GPLv2 \
	COPYING.GPLv3 \
	COPYING.LGPLv2 \
	COPYING.LGPLv3 \
	INSTALL \
	NEWS \
	README \
	ChangeLog

EXTRA_DIST = \
	$(BASIC_DOCS) \
	depcomp \
	autogen.sh \
	ecell_version.sh \
	configure.ac.in

doc_DATA = $(BASIC_DOCS)
