AC_REVISION([$Id$])
dnl
dnl
AC_INIT
AC_CONFIG_SRCDIR([autogen.sh])
dnl
source ecell_version.sh
dnl AC_CONFIG_AUX_DIR()
dnl
dnl 
dnl 
dnl
AC_CANONICAL_TARGET([])
AM_INIT_AUTOMAKE([ecell],${ECELL_VERSION_NUMBER})
AC_PROG_MAKE_SET
dnl
dnl
dnl AC_LIBLTDL_INSTALLABLE
AC_LIBLTDL_CONVENIENCE
AC_SUBST(INCLTDL)
AC_SUBST(LIBLTDL)
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
dnl
dnl
AC_CONFIG_SUBDIRS( libltdl dmtool ecell )
dnl
dnl
AC_ARG_WITH(gtk,
  AC_HELP_STRING([--without-gtk],
	         [build ecell without gtk library.]),,)
dnl
dnl
dnl
AC_ARG_ENABLE( compiler-extensions,
	       AC_HELP_STRING([--disable-compiler-extensions],
	       [Don't exploit the compiler's special language syntax and optimizations that are not part of the standard (such as ISO C++).] ) )
dnl	       
dnl
AM_CONFIG_HEADER([ecell3_config.h])
dnl
dnl
dnl Create the top-level Makefile.
dnl
AC_CONFIG_FILES([Makefile])
dnl
AC_OUTPUT(ecell3.doxy)

