AUTOMAKE_OPTIONS = foreign

SUBDIRS = glade

modeleditordir=${pkglibdir}
modeleditor_PYTHON=\
Buffer.py\
BufferFactory.py\
Command.py\
CommandQueue.py\
ComplexShape.py\
ConfirmWindow.py\
ConnectionLine.py\
ConnectionObjectEditorWindow.py\
Constants.py\
DMInfo.py\
EditorObject.py\
EntityCommand.py\
EntityEditor.py\
EntityList.py\
EntityListWindow.py\
FullIDBrowserWindow.py\
Layout.py\
LayoutBuffer.py\
LayoutBufferFactory.py\
LayoutCommand.py\
LayoutManager.py\
LayoutManagerWindow.py\
LayoutXML.py\
ListWindow.py\
MainWindow.py\
ModelEditor.py\
ModelStore.py\
MultiLineEditor.py\
NestedListEditor.py\
ObjectEditorWindow.py\
PathwayEditor.py\
PopupMenu.py\
ProcessObject.py\
PropertyEditor.py\
PropertyList.py\
ShapePropertyComponent.py\
StepperChooser.py\
StepperCommand.py\
StepperEditor.py\
StepperList.py\
StepperWindow.py\
SystemObject.py\
SystemTree.py\
TextObject.py\
Utils.py\
VariableObject.py\
VariableReferenceEditor.py\
ViewComponent.py\
Window.py\
PathwayCanvas.py\
Config.py\
CommandMultiplexer.py\
PackingStrategy.py\
ecell3-me\
opengui.py\
VariableReferenceEditorComponent.py\
ShapePropertyComponent.py\
ShapeDescriptor.py\
ObjectEditorWindow.py\
LinePropertyComponent.py\
LayoutManagerWindow.py\
GraphicalUtils.py\
ConnectionObjectEditorWindow.py\
ComplexShape.py


EXTRA_DIST=${modeleditor_PYTHON}

bin_SCRIPTS =\
ecell3-me
